fix(general): Minor stylstic changes
- Index gets extra padding to set it further away from the footer
- Ribbon building wording slightly altered
- Enhanced secondary navigation identation based on user feedback (more
idented, though font-size step down remains unchanged)
- Cleaned up home.tpl.html
- Removed unused attributions.tpl.html

--- a/src/app/navigation/_navigation.scss
+++ b/src/app/navigation/_navigation.scss
@@ -16,10 +16,10 @@ right-nav-bar {
 left-nav-bar {
   @for $i from 0 through 4 {
     .indentation-#{$i} {
-      $step: ($i * 5%);
+      $step: ($i * 10%);
       width: 100% - $step;
       margin-left: $step !important;
-      font-size: 100% - $step;
+      font-size: 100% - ($step / 2);
     }
   }
 }
